Fixed z-index issue where the right side of the exterior building was not clickable

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -103,7 +103,6 @@
 	--close-btn-height: 2rem;
 	overflow-y: auto;
 	position: fixed;
-	z-index: 1010;
 
 	top: 0;
 	right: 0;
@@ -145,6 +144,7 @@
 
 .sp-info-pane__back {
 	position: absolute;
+	z-index: 1010;
 	width: 100vw;
 	height: 100vh;
 	left: calc(var(--close-btn-height) * -1);
@@ -157,7 +157,7 @@
 
 .sp-info-pane__inner {
 	position: relative;
-	z-index: 10;
+	z-index: 1010;
 
 	display: flex;
 	flex-direction: column;
@@ -617,6 +617,7 @@
 
 .sp-exterior {
 	position: relative;
+	z-index: 1;
 	left: -7%;
 	
 	width: 120%;
